--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,142 @@
-baseURL = "https://magic.afri.cz/"
+# Site settings
+baseURL = "https://vtes.afri.cz/"
 languageCode = "en-us"
-title = "Afri plays Magic: the Gathering"
+title = "Afri plays Vampire: The Eternal Struggle"
+theme = "forty"
+
+# Enter your tracking code to enable Google Analytics
+googleAnalytics = ""
+
+# Enter your disqus shortname to enable comments
+disqusShortname = ""
+
+[params]
+  # You can use Markdown syntax for urls [text](//url.to/source)
+  # To create multi-line text in strings use the """example Text""" format
+  #
+  # All icons using Fontawesome's icon font. Look at fontawesome.io/icons
+  # for more icons. The icons are represented by their corresponding
+  # CSS class.
+
+  # Provide your metadata here.
+  name = "Petr Muller"
+  description = "Notes and writeups about Vampire: The Eternal Struggle"
+
+  # Link custom assets relative to /static
+  custom_css = []
+  custom_js  = []
+  favicon    = "favicon.ico"
+
+  # Just a custom image variable, please define it in .md files for content.
+  image = ""
+
+  # 404 error customization
+  [params.error404]
+    heading = "Page couldn't be found"
+    text = "Please visit [this page](/)"
+
+  # Navigation Section
+  [params.navigation]
+    title = "Afri"
+    subtitle = "Plays Vampire: The Eternal Struggle"
+    menu = "Menu"
+    # Optional logo as brand stored in img/
+    # logo = "logo.png"
+
+    [[params.navigation.links]]
+      name = "Home"
+      url = "#"
+
+    [[params.navigation.links]]
+      name = "Tournaments"
+      url = "tournaments"
+
+    # Add custom links here by uncommenting code below. To remove links just delete
+    # the [[params.navigation.links]] map associated with that link. Copy and paste
+    # code below if you need more links. Buttons work in the same way.
+    # [[params.navigation.links]]
+    #    name = "NameOfLink"
+    #    url = "UrlOfLink"
+
+  # Banner section
+  [params.banner]
+    # To change the background image on the homepage banner, replace 'banner.jpg' in
+    # the 'static/img' folder.
+    title = "Afri plays Vampire: The Eternal Struggle"
+    subtitle = "Hi! My name is Petr, but my nickname is Afri."
+    buttonText = ""
+
+
+  # Tiles Section
+  [params.tiles]
+    enable = false
+    # Display your showcases here.
+
+    [[params.tiles.showcase]]
+      title = "Aliquam"
+      subtitle = "Ipsum Dolor Sit Amet"
+      image = "pic01.jpg"
+      url = "blogs/aliquam"
+
+  [params.blog]
+    # All blogs defined in their own files. You can find example blogs
+    # at 'exampleSite/content/blogs'. Copy the 'blogs' folder into the 'content' directory
+    # at the root of this Hugo site.
+    # For more informtion take a look at the README.
+    # To add more blogs just copy and paste the code.
+
+  # Section Type Two
+  [params.two]
+    enable = false
+    title = "Tournaments"
+    subtitle = """I really like competetive play, probably even more than casual! I like to take notes so that I can keep track of my plays and mistakes, and to learn from them."""
+    buttonText = "Read tournament notes"
+    url = "tournaments"
+
+
+  # Contact section
+  [params.contact]
+    enable = false
+    buttonSend = "Send message"
+    buttonClear = "Clear"
+
+    # Since this template is static, the contact form uses www.formspree.io as a
+    # proxy. The form makes a POST request to their servers to send the actual
+    # email. Visitors can send up to a 1000 emails each month for free.
+    #
+    # What you need to do for the setup?
+    #
+    # - set your email address under 'email' below and uncomment
+    # - upload the generated site to your server
+    # - send a dummy email yourself to confirm your account
+    # - click the confirm link in the email from www.formspree.io
+    # - you're done. Happy mailing!
+    # formEmail = "example@domain.com"
+
+    # Contact Section
+    # You can add multiple emails, phone numbers, or addresses
+    # by copying the corresponding map with frontmatter code.
+    [[params.contact.email]]
+    title = "Email"
+    email = "example@domain.com"
+
+    [[params.contact.phone]]
+    title = "Phone"
+    phone = "(000) 000-0000 x1234"
+
+    [[params.contact.address]]
+    title = "Address"
+    street = "Street"
+    city = "City, ST 00000"
+    country = "Country"
+
+  # Footer section
+  [params.footer]
+    enable = true
+    copyright = "Petr Muller"
+
+    # Uses font awesome icons
+    [[params.footer.social]]
+      icon = "fa-twitter"
+      url= "https://www.twitter.com/czafri"
+      label = "Twitter"
