Add a link to magic.afri.cz

--- a/config.toml
+++ b/config.toml
@@ -51,6 +51,14 @@ disqusShortname = ""
       name = "Tournaments"
       url = "tournaments"
 
+    [[params.navigation.links]]
+      name = "---"
+      url = "#"
+
+    [[params.navigation.button2]]
+      name = "Magic: The Gathering"
+      url = "https://magic.afri.cz"
+
     # Add custom links here by uncommenting code below. To remove links just delete
     # the [[params.navigation.links]] map associated with that link. Copy and paste
     # code below if you need more links. Buttons work in the same way.
