--- a/config.toml
+++ b/config.toml
@@ -82,10 +82,24 @@ disqusShortname = ""
     subtitle = "Hi! My name is Petr. My nickname is Afri. I started playing VtES when Anarchs came out in 2003."
     buttonText = ""
 
-
   # Tiles Section
   [params.tiles]
     enable = true
+#    [[params.tiles.showcase]]
+#      title = "Dabblesnakes"
+#      subtitle = "A stealth-bleed deck using V5 Ministry that uses Dabbler and Crimeth, Inc. to run multiple actions"
+#      image = "decks/dabbler.jpg"
+#      url = "decks/20220624-dabblesnakes"
+#    [[params.tiles.showcase]]
+#      title = "Persistent Echo"
+#      subtitle = "0GW 0VP playing Banu Haqim Legacy in 15-player tournament in Aix-en-Provence, France"
+#      image = "tournaments/persistentecho.jpg"
+#      url = "tournaments/20220618-persistent-echo"
+    [[params.tiles.showcase]]
+      title = "Grand Prix Aix-en-Provence"
+      subtitle = "0GW 0VP playing Dabblesnakes in 24-player Grand Prix in Aix-en-Provence, France"
+      image = "tournaments/aix.jpg"
+      url = "tournaments/20220617-aix-en-provence"
     [[params.tiles.showcase]]
       title = "5th Road to Pulled Fang #11"
       subtitle = "0GW 1VP playing Infernal Princes of Anarchy in 20-player tournament in Brno, CZ"
