Add a little 'type' header to the showcase tiles

--- a/config.toml
+++ b/config.toml
@@ -88,46 +88,55 @@ disqusShortname = ""
 #    [[params.tiles.showcase]]
 #      title = "Dabblesnakes"
 #      subtitle = "A stealth-bleed deck using V5 Ministry that uses Dabbler and Crimeth, Inc. to run multiple actions"
+#      type = "tournament report"
 #      image = "decks/dabbler.jpg"
 #      url = "decks/20220624-dabblesnakes"
 #    [[params.tiles.showcase]]
 #      title = "Persistent Echo"
 #      subtitle = "0GW 0VP playing Banu Haqim Legacy in 15-player tournament in Aix-en-Provence, France"
+#      type = "tournament report"
 #      image = "tournaments/persistentecho.jpg"
 #      url = "tournaments/20220618-persistent-echo"
     [[params.tiles.showcase]]
       title = "Grand Prix Aix-en-Provence"
       subtitle = "0GW 0VP playing Dabblesnakes in 24-player Grand Prix in Aix-en-Provence, France"
+      type = "tournament report"
       image = "tournaments/aix.jpg"
       url = "tournaments/20220617-aix-en-provence"
     [[params.tiles.showcase]]
       title = "5th Road to Pulled Fang #11"
       subtitle = "0GW 1VP playing Infernal Princes of Anarchy in 20-player tournament in Brno, CZ"
+      type = "tournament report"
       image = "tournaments/arishat.png"
       url = "tournaments/20220604-road-to-pulled-fang-05"
     [[params.tiles.showcase]]
       title = "4th Road to Pulled Fang #11"
       subtitle = "0GW 0VP playing Enkidu Block in 21-player tournament in Hradec Králové, CZ"
+      type = "tournament report"
       image = "tournaments/20220514-hk.png"
       url = "tournaments/20220519-road-to-pulled-fang-04"
     [[params.tiles.showcase]]
       title = "Wagner's Wet Dream"
       subtitle = "A Valkyrie swarm-bleed deck with Revolutionary Council as a finisher"
+      type = "deck notes"
       image = "decks/brunhilde.jpg"
       url = "decks/20220505-wagners-wet-dream"
     [[params.tiles.showcase]]
       title = "Banu Haqim Legacy"
       subtitle = "An experimental bruise bleed deck with Haqim's Law: Retribution and Quietus combat"
+      type = "deck notes"
       image = "decks/urshulgi.png"
       url = "decks/20220109-banu-haqim-legacy"
     [[params.tiles.showcase]]
       title = "Nosferatu Royalty and Strohmann"
       subtitle = "Nosferatu bigcaps with titles. A well-rounded toolbox that can adapt to different table positions and situations."
+      type = "deck notes"
       image = "decks/strohmann.png"
       url = "decks/20211203-nosferatu-bigcap-toolbox"
     [[params.tiles.showcase]]
       title = "Summer Tournament in Brno"
       subtitle = "0GW 3VP playing AUS OBF Black Hand in 15-player tournament"
+      type = "tournament report"
       image = "tournaments/elimelech.png"
       url = "tournaments/20200725-brno"
 
