--- a/config.toml
+++ b/config.toml
@@ -97,12 +97,12 @@ disqusShortname = ""
 #      type = "deck notes"
 #      image = "decks/dabbler.jpg"
 #      url = "decks/20220624-dabblesnakes"
-#    [[params.tiles.showcase]]
-#      title = "Persistent Echo"
-#      subtitle = "0GW 0VP playing Banu Haqim Legacy in 15-player tournament in Aix-en-Provence, France"
-#      type = "tournament report"
-#      image = "tournaments/persistentecho.jpg"
-#      url = "tournaments/20220618-persistent-echo"
+    [[params.tiles.showcase]]
+      title = "Persistent Echo"
+      subtitle = "0GW 0VP playing Banu Haqim Legacy in 15-player tournament in Aix-en-Provence, France"
+      type = "tournament report"
+      image = "tournaments/persistentecho.jpg"
+      url = "tournaments/20220618-persistent-echo"
     [[params.tiles.showcase]]
       title = "Grand Prix Aix-en-Provence"
       subtitle = "0GW 0VP playing Dabblesnakes in 24-player Grand Prix in Aix-en-Provence, France"
