Dabblesnakes: Add risks
Also, kick off thoughts on taking a break from competitive vtes and also on Fall of London

--- a/config.toml
+++ b/config.toml
@@ -54,6 +54,9 @@ disqusShortname = ""
     [[params.navigation.links]]
       name = "Decks"
       url = "decks"
+    [[params.navigation.links]]
+      name = "Thoughts"
+      url = "thoughts"
 
 #    [[params.navigation.links]]
 #      name = "Decks"
