--- a/config.toml
+++ b/config.toml
@@ -148,6 +148,12 @@ disqusShortname = ""
       type = "tournament report"
       image = "tournaments/elimelech.png"
       url = "tournaments/20200725-brno"
+    [[params.tiles.showcase]]
+      title = "Pulled Fang #9"
+      subtitle = "0GW 2VP playing Enkidu Block in 17-player Czech Nationals tournament"
+      type = "tournament report"
+      image = "tournaments/pulledfang.jpg"
+      url = "tournaments/20201001-pulled-fang-9"
 
   [params.blog]
     # All blogs defined in their own files. You can find example blogs
